# cookiecutter-django

./: .gitignore  LICENSE  README.rst  cookiecutter.json  setup.py
hooks/: pre_gen_project.py
{{ cookiecutter.package_name }}/: MANIFEST.in  Makefile  README.rst  conftest.py  setup.cfg  setup.py
{{ cookiecutter.package_name }}/src/{{ cookiecutter.module_name }}/: __about__.py  wsgi.py  {% if cookiecutter.use_docker_compose %}docker-compose.yml{% endif %}
{{ cookiecutter.package_name }}/src/{{ cookiecutter.module_name }}/runner/: __init__.py  __main__.py  decorators.py
{{ cookiecutter.package_name }}/src/{{ cookiecutter.module_name }}/runner/commands/: django.py
{{ cookiecutter.package_name }}/src/{{ cookiecutter.module_name }}/settings/: __init__.py  base.py
{{ cookiecutter.package_name }}/tests/: runtest.sh
{{ cookiecutter.package_name }}/tests/core/: test_core.py
