[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True
tag_name = {{ '{new_version}' }}

[bumpversion:file:src/{{ cookiecutter.module_name }}/__about__.py]
search = __version__ = "{{ '{current_version}' }}"
replace = __version__ = "{{ '{new_version}' }}"

[metadata]
description-file = README.rst

[flake8]
ignore = N8,D4,D1,D2,D3,C9,E731
exclude =
	build, docs, dist,
	setup.py,
	*/migrations,
	src/{{ cookiecutter.module_name }}/settings,
	test*.py
